--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,10 +2,8 @@
 layout: default
 refactor: true
 panel_includes:
-- toc
-- adsense
+  - toc
 tail_includes:
-  - adsense
   - related-posts
   - post-nav
 script_includes:
@@ -15,11 +13,6 @@ script_includes:
 {% include lang.html %}
 
 {% include toc-status.html %}
-
-{% if page.applause_button %}
-  <link rel="stylesheet" href="https://unpkg.com/applause-button@4.0.1/dist/applause-button.css">
-  <script src="{{ site.baseurl }}/assets/js/data/applause-button.js"></script>
-{% endif %}
 
 <article class="px-1" data-toc="{{ enable_toc }}">
   <header>
@@ -53,9 +46,9 @@ script_includes:
         {% endif %}
 
         <div class="mt-3 mb-3">
-          <img {{ src }} {{ class }} {{ alt }} w="1200" h="630" {{ lqip | strip }}>
+          <img {{ src }} {{ class }} {{ alt }} w="1200" h="630" {{ lqip }}>
           {%- if page.image.alt -%}
-            <figcaption class="text-center pt-2 pb-2">{{ page.image.alt | markdownify }}</figcaption>
+            <figcaption class="text-center pt-2 pb-2">{{ page.image.alt }}</figcaption>
           {%- endif -%}
         </div>
       {% endif %}
@@ -105,23 +98,6 @@ script_includes:
     </div>
   </header>
 
-  <br><br>
-  {% include inarticle_ads.html %}
-  
-  <br><br>
-  <!-- View counts -->
-  {% capture url %} https://{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}
-  {% endcapture %}
-  {% capture view_img_url %}
-  https://hits.seeyoufarm.com/api/count/incr/badge.svg?url={{url}}&count_bg=%233A3A3A&title_bg=%23111111&icon=myspace.svg&icon_color=%23E7E7E7&title=Views&edge_flat=false
-  {% endcapture %}
-  {% assign view_img_url = view_img_url | remove: " " %}
-  
-  <div class="align-items-center w-100" style="text-align: center; margin-bottom: 1rem;">
-    <img src="{{view_img_url}}" />
-  </div>
-  
-  
   {% if enable_toc %}
     <div id="toc-bar" class="d-flex align-items-center justify-content-between invisible">
       <span class="label text-truncate">{{ page.title }}</span>
@@ -149,16 +125,6 @@ script_includes:
   <div class="content">
     {{ content }}
   </div>
-  
-  
-  <div class="post-tail-wrapper text-muted">
-    {% if page.applause_button %}
-    <div class="applause-button">
-      <applause-button class="mb6" color={{ site.accent_color | default:'rgb(79,177,186)' }} url={{ page.url |
-        absolute_url }}>
-      </applause-button>
-    </div>
-    {% endif %}  
 
   <div class="post-tail-wrapper text-muted">
     <!-- categories -->
@@ -172,31 +138,36 @@ script_includes:
       </div>
     {% endif %}
 
-  <!-- tags -->
-  {% if page.tags.size > 0 %}
-  <div class="post-tags">
-    <i class="fa fa-tags fa-fw me-1"></i>
-    {% for tag in page.tags %}
-    <a href="{{ site.baseurl }}/tags/{{ tag | slugify | url_encode }}/" class="post-tag no-text-decoration">
-      {{- tag -}}
-    </a>
-    {% endfor %}
-  </div>
-  {% endif %}
-
-  <br><br>
-  {% include inarticle_ads.html %}
-
-  <div class="post-tail-bottom
-    d-flex justify-content-between align-items-center mt-5 pb-2">
-    <div class="license-wrapper">
-      {% if site.data.locales[lang].copyright.license.template %}
-        {% capture _replacement %}
-          <a href="{{ site.data.locales[lang].copyright.license.link }}">
-            {{ site.data.locales[lang].copyright.license.name }}
+    <!-- tags -->
+    {% if page.tags.size > 0 %}
+      <div class="post-tags">
+        <i class="fa fa-tags fa-fw me-1"></i>
+        {% for tag in page.tags %}
+          <a
+            href="{{ site.baseurl }}/tags/{{ tag | slugify | url_encode }}/"
+            class="post-tag no-text-decoration"
+          >
+            {{- tag -}}
           </a>
+        {% endfor %}
+      </div>
+    {% endif %}
+
+    <div
+      class="
+        post-tail-bottom
+        d-flex justify-content-between align-items-center mt-5 pb-2
+      "
+    >
+      <div class="license-wrapper">
+        {% if site.data.locales[lang].copyright.license.template %}
+          {% capture _replacement %}
+        <a href="{{ site.data.locales[lang].copyright.license.link }}">
+          {{ site.data.locales[lang].copyright.license.name }}
+        </a>
         {% endcapture %}
-        {{ site.data.locales[lang].copyright.license.template | replace: ':LICENSE_NAME', _replacement }}
+
+          {{ site.data.locales[lang].copyright.license.template | replace: ':LICENSE_NAME', _replacement }}
         {% endif %}
       </div>
 
@@ -206,4 +177,3 @@ script_includes:
   </div>
   <!-- div.post-tail-wrapper -->
 </article>
-
