--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -3,19 +3,19 @@ layout: page
 # All the Tags of posts.
 ---
 
-<div id="tags" class="d-flex flex-wrap mx-xl-2 mb-5">
-  {% capture tags %}
-    {% for tag in site.tags %}
-      {{ tag[1].size | plus: 1000 }}#{{ tag[0] }}#{{ tag[1].size }}
-    {% endfor %}
-  {% endcapture %}
-  {% assign
-   sortedtags = tags | split: ' ' | sort %}
-  {% for tag in sortedtags reversed %}
-    {% assign tagitems = tag | split: '#' %}
+<div id="tags" class="d-flex flex-wrap mx-xl-2">
+  {% assign tags = '' | split: '' %}
+  {% for t in site.tags %}
+    {% assign tags = tags | push: t[0] %}
+  {% endfor %}
+
+  {% assign sorted_tags = tags | sort_natural %}
+
+  {% for t in sorted_tags %}
     <div>
-      <a class="tag" href="{{ tagitems[1] | slugify | url_encode | prepend: '/tags/' | append: '/' | relative_url }}">{{ tagitems[1] }}
-        <span class="text-muted">{{ tagitems[2] }}</span>
+      <a class="tag" href="{{ t | slugify | url_encode | prepend: '/tags/' | append: '/' | relative_url }}">
+        {{ t -}}
+        <span class="text-muted">{{ site.tags[t].size }}</span>
       </a>
     </div>
   {% endfor %}
