--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@ layout: compress
         extensions: ["tex2jax.js"],
         jax: ["input/TeX", "output/HTML-CSS"],
         tex2jax: {
-        inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-        displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-        processEscapes: true,
+        inlineMath: [ ['$','$'] ],
+        displayMath: [ ['$$','$$']],
+        processEscapes: false,
         "HTML-CSS": { fonts: ["TeX"] }
       }
     });
