--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -262,27 +262,30 @@ table td:last-child {
 }
 
 .md-fences,
-// code,
+code,
 tt {
-  border: 1px solid #e7eaed;
+  // border: 1px solid #e7eaed; // 应该是边框，不要边框
   background-color: #f8f8f8;
-  border-radius: 3px;
+  // border-radius: 3px;
   padding: 0;
-  padding: 2px 4px 0px 4px;
+  // padding: 2px 4px 0px 4px;
   font-size: 0.9em;
 }
 
+// 代码样式
 code {
-  background-color: #f3f4f4;
-  padding: 0 2px 0 2px;
+  background-color: #f3f4f4; //背景色
+  padding: 0 0 0 0; //间距：上 右 下 左
+
 }
 
-.md-fences {
-  margin-bottom: 15px;
-  margin-top: 15px;
-  padding-top: 8px;
-  padding-bottom: 6px;
-}
+// 不需要位移
+// .md-fences {
+//   margin-bottom: 15px;
+//   margin-top: 15px;
+//   padding-top: 8px;
+//   padding-bottom: 6px;
+// }
 
 
 .md-task-list-item > input {
