--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -252,14 +252,14 @@ table td:last-child {
   margin-bottom: 0;
 }
 
-.CodeMirror-lines {
-  padding-left: 4px;
-}
+// .CodeMirror-lines {
+//   padding-left: 4px;
+// }
 
-.code-tooltip {
-  box-shadow: 0 1px 1px 0 rgba(0,28,36,.3);
-  border-top: 1px solid #eef2f2;
-}
+// .code-tooltip {
+//   box-shadow: 0 1px 1px 0 rgba(0,28,36,.3);
+//   border-top: 1px solid #eef2f2;
+// }
 
 .md-fences,
 code,
