--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -261,23 +261,23 @@ table td:last-child {
 //   border-top: 1px solid #eef2f2;
 // }
 
-.md-fences,
-code,
-tt {
-  // border: 1px solid #e7eaed; // 应该是边框，不要边框
-  background-color: #f8f8f8;
-  // border-radius: 3px;
-  padding: 0;
-  // padding: 2px 4px 0px 4px;
-  font-size: 0.9em;
-}
+// .md-fences,
+// code,
+// tt {
+//   // border: 1px solid #e7eaed; // 应该是边框，不要边框
+//   background-color: #f8f8f8;
+//   // border-radius: 3px;
+//   padding: 0;
+//   // padding: 2px 4px 0px 4px;
+//   font-size: 0.9em;
+// }
 
 // 代码样式
-code {
-  background-color: #f3f4f4; //背景色
-  padding: 0 0 0 0; //间距：上 右 下 左
+// code {
+//   background-color: #f3f4f4; //背景色
+//   padding: 0 0 0 0; //间距：上 右 下 左
 
-}
+// }
 
 // 不需要位移
 // .md-fences {
