--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -316,9 +316,9 @@ padding: 1rem;
   margin-top: 0 !important;
 }
 
-.mathjax-block>.code-tooltip {
-bottom: .375rem;
-}
+// .mathjax-block>.code-tooltip {
+// bottom: .375rem;
+// }
 
 .md-mathjax-midline {
   background: #fafafa;
