--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -305,16 +305,16 @@ margin-left: -1.3em;
 // background-color: #f8f8f8;
 // }
 
-#write pre.md-meta-block {
-padding: 1rem;
-  font-size: 85%;
-  line-height: 1.45;
-  background-color: #f7f7f7;
-  border: 0;
-  border-radius: 3px;
-  color: #777777;
-  margin-top: 0 !important;
-}
+// #write pre.md-meta-block {
+// padding: 1rem;
+//   font-size: 85%;
+//   line-height: 1.45;
+//   background-color: #f7f7f7;
+//   border: 0;
+//   border-radius: 3px;
+//   color: #777777;
+//   margin-top: 0 !important;
+// }
 
 // .mathjax-block>.code-tooltip {
 // bottom: .375rem;
