--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,11 +25,10 @@ layout: compress
         extensions: ["tex2jax.js"],
         jax: ["input/TeX", "output/HTML-CSS"],
         tex2jax: {
-          inlineMath: [['$','$']],
-          displayMath: [['$$','$$']],
-          skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-          processEscapes: ture,
-          "HTML-CSS": { fonts: ["TeX"] }
+        inlineMath: [['$','$']],
+        displayMath: [['$$','$$']],
+        processEscapes: false,
+        "HTML-CSS": { fonts: ["TeX"] }
       }
     });
     MathJax.Hub.Register.MessageHook("Math Processing Error",function (message) {
