--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@ layout: compress
         tex2jax: {
         inlineMath: [['$','$']],
         displayMath: [['$$','$$']],
-        processEscapes: false,
+        processEscapes: true,
         "HTML-CSS": { fonts: ["TeX"] }
       }
     });
